Добавила анимацию для дирижабля

--- a/source/index.html
+++ b/source/index.html
@@ -195,8 +195,8 @@
             <li class="prizes__item prizes__item--journeys">
               <div class="prizes__icon">
                 <picture>
-                  <source srcset="img/prize1-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize1.svg" alt="">
+                  <source srcset="img/additional-award-from.svg" media="(orientation: portrait)">
+                  <img src="img/additional-award-from.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
