--- a/source/index.html
+++ b/source/index.html
@@ -195,13 +195,13 @@
             <li class="prizes__item prizes__item--journeys">
               <div class="prizes__icon">
                 <picture>
-                  <source srcset="img/additional-award-from.svg" media="(orientation: portrait)">
-                  <img src="img/additional-award-from.svg" alt="">
+                  <source srcset="img/primary-award-from.svg" media="(orientation: portrait)">
+                  <img src="img/primary-award-from.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>3</b>
-                <span>загадочных путешествия</span>
+                <b class="prizes__number">3</b>
+                <span class="prizes__spec">загадочных путешествия</span>
               </p>
             </li>
             <li class="prizes__item prizes__item--cases">
@@ -212,20 +212,20 @@
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>7</b>
-                <span>надежных чемоданов</span>
+                <b class="prizes__number">7</b>
+                <span class="prizes__spec">надежных чемоданов</span>
               </p>
             </li>
             <li class="prizes__item prizes__item--codes">
               <div class="prizes__icon">
                 <picture>
-                  <source srcset="img/prize3-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize3.svg" alt="">
+                  <source srcset="img/additional-award-from.svg" media="(orientation: portrait)">
+                  <img src="img/additional-award-from.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
-                <b>900</b>
-                <span>
+                <b class="prizes__number">900</b>
+                <span class="prizes__spec">
                   промокодов на&nbsp;скидку 15%
                   <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 6.35337L3.90271 4.99012L0 3.64663L1.34615 1.32374L4.44287 4.01073L3.67364 0H6.34615L5.57692 4.01073L8.65385 1.32374L10 3.64663L6.13405 4.99012L10 6.35337L8.65385 8.65651L5.57692 5.98927L6.34615 10H3.67364L4.44287 5.96952L1.34615 8.65651L0 6.35337Z" fill="currentColor"/>
