Реализовывала анимацию таймера обратного отсчета

--- a/source/index.html
+++ b/source/index.html
@@ -309,7 +309,7 @@
           <div class="game__header">
             <h2 class="game__title">Игра</h2>
             <div class="game__counter">
-              <span>05</span>:<span>00</span>
+              <span class="js-game-counter-minutes">00</span>:<span class="js-game-counter-seconds">00</span>
             </div>
           </div>
           <div class="game__body">
