Реализовывала анимацию количества призов

--- a/source/index.html
+++ b/source/index.html
@@ -211,8 +211,8 @@
                   <img src="img/secondary-award-from.svg" alt="">
                 </picture>
               </div>
-              <p class="prizes__desc">
-                <b class="prizes__number">7</b>
+              <p class="prizes__desc js-prizes-cases-desc">
+                <b class="prizes__number js-prizes-cases-number">1</b>
                 <span class="prizes__spec">надежных чемоданов</span>
               </p>
             </li>
@@ -223,8 +223,8 @@
                   <img src="img/additional-award-from.svg" alt="">
                 </picture>
               </div>
-              <p class="prizes__desc">
-                <b class="prizes__number">900</b>
+              <p class="prizes__desc js-prizes-codes-desc">
+                <b class="prizes__number js-prizes-codes-number">11</b>
                 <span class="prizes__spec">
                   промокодов на&nbsp;скидку 15%
                   <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
